--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "News-Scraping-App",
   "version": "1.0.0",
-  "description": "",
+  "description": "Helps you find news articles",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "repository": {
